Added command interpretation and execution by typed sequence + json storage of command

--- a/KeyboardGestures.App/KeyboardGestures.App.csproj
+++ b/KeyboardGestures.App/KeyboardGestures.App.csproj
@@ -30,4 +30,8 @@
 	  <ProjectReference Include="..\KeyboardGestures.Core\KeyboardGestures.Core.csproj" />
 	  <ProjectReference Include="..\KeyboardGestures.UI\KeyboardGestures.UI.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="Resources\commands.json" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
 </Project>
