Added displayCommand class to format UI output of commands

--- a/KeyboardGestures.UI/KeyboardGestures.UI.csproj
+++ b/KeyboardGestures.UI/KeyboardGestures.UI.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KeyboardGestures.Core\KeyboardGestures.Core.csproj" />
+  </ItemGroup>
+
 	
 
 </Project>
