--- a/KeyboardGestures.UI/KeyboardGestures.UI.csproj
+++ b/KeyboardGestures.UI/KeyboardGestures.UI.csproj
@@ -9,11 +9,16 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.9" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KeyboardGestures.Core\KeyboardGestures.Core.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<AvaloniaResource Include="Assets\**\*"/>
+	</ItemGroup>
 
 	
 
