--- a/KeyboardGestures.UI/KeyboardGestures.UI.csproj
+++ b/KeyboardGestures.UI/KeyboardGestures.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.9" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.8" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
 
   </ItemGroup>
@@ -17,7 +18,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<AvaloniaResource Include="Assets\**\*"/>
+		<AvaloniaResource Include="Assets\**\*" />
 	</ItemGroup>
 
 	
