--- a/KeyboardGestures.UI/KeyboardGestures.UI.csproj
+++ b/KeyboardGestures.UI/KeyboardGestures.UI.csproj
@@ -4,12 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <UseSystemDrawing>true</UseSystemDrawing>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.3.9" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.3.8" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
+	<PackageReference Include="System.Drawing.Common" Version="8.0.0" />
 
   </ItemGroup>
 
@@ -17,9 +19,6 @@
     <ProjectReference Include="..\KeyboardGestures.Core\KeyboardGestures.Core.csproj" />
   </ItemGroup>
 
-	<ItemGroup>
-		<AvaloniaResource Include="Assets\**\*" />
-	</ItemGroup>
 
 	
 
